8141501: Problems with BitMap buffer management

Reviewed-by: pliden, kbarrett